      prevent ALL units of any faction other than the owner from pillaging.
      The code up until now had been implementing it as any unit of a
      nuetral or worse stance faction.  This has been fixed.
   -- Added item and object descriptions.  Redid skill descriptions.
   -- Made horse/wagon generic rather than hardcoded. 
   -- Removed the special case of earthquakes not affecting MFORTRESS.  This
      is now handled by a NOEARTHQUAKE flags on the object in the ObjectDefs
      structure.
   -- Added skillflag SLOWSTUDY.  If you modify a skill to have this flag,
      a month of study will only produce 15 days of learning in the skill.
      This is cumulative with non-tower penalty for magic skills over level 2.
   -- Fixed a bug which could potentially result in GUARD_ADVANCE being left
      set on a unit across turns.
   -- Fixed a bug in calculating planar distances around the east/west
      boundary.
   -- Added some 'commands' allowable in the Players.in file which allow the
      GM to give a faction custom-made units, or to give existing units of
      that faction various skills or items (or to take them away).  It also
      allows the GM to force some orders to be executed by specific units.
   -- Added a new itemflag NOMARKET, which prevents an item from ever showing
      up in a city market (either wanted or for sale).
   -- Added code to allow magic items into the markets on world creation.  All
      magic items currently are NOMARKET, so there will by default be no
      change.
   -- Moved some items from NORMAL to ADVANCED (lance and pike) and moved
      some items from MAGIC to ADVANCED (and added NOMARKET) (admantium items,
      improved mithril armor, super bows).
   -- Modified Axes from having Hammers boost their production to having
      Axes boost their production by default.  This makes them consistant with
      other items made from wood rather than being the exception.