@@ -2677,6 +2677,54 @@ static ObjectType ot[] =
 	 -1,0,-1,0,
 	 0,0,0,
 	 I_HYDRA,-1},
+	{"Trapping Hut",
+	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 0,0,0,
+	 I_WOOD_OR_STONE,10,S_HUNTING,3,
+	 10,2,2,
+	 -1,I_FUR},
+	{"Stables",
+	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 0,0,0,
+	 I_WOOD_OR_STONE,10,S_HORSETRAINING,3,
+	 10,2,2,
+	 -1,I_HORSE},
+	{"Mythic Stables",
+	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 0,0,0,
+	 I_IRONWOOD,10,S_HORSETRAINING,5,
+	 10,2,2,
+	 -1,I_WHORSE},
+	{"Trapping Lodge",
+	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 0,0,0,
+	 I_IRONWOOD,10,S_HUNTING,5,
+	 10,2,2,
+	 -1,I_FLOATER},
+	{"Faerie Ring",
+	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 0,0,0,
+	 I_MUSHROOM,10,S_HERBLORE,3,
+	 10,2,2,
+	 -1,I_MUSHROOM},
+	{"Alchemist Lab",
+	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 0,0,0,
+	 I_ADMANTIUM,10,S_MINING,5,
+	 10,2,2,
+	 -1,I_ADMANTIUM},
+	{"Oasis",
+	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 0,0,0,
+	 I_YEW,10,S_CAMELTRAINING,3,
+	 10,2,2,
+	 -1,I_CAMEL},
+	{"Gem Appraiser",
+	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 0,0,0,
+	 I_WOOD_OR_STONE,10,S_MINING,3,
+	 10,2,2,
+	 -1,I_ROUGHGEM},
 };
 
 ObjectType * ObjectDefs = ot;
