@@ -593,6 +593,14 @@ enum {
 	O_ILAIR,
 	O_ICECAVE,
 	O_BOG,
+	O_TRAPPINGHUT,
+	O_STABLE,
+	O_MSTABLE,
+	O_TRAPPINGLODGE,
+	O_FAERIERING,
+	O_ALCHEMISTLAB,
+	O_OASIS,
+	O_GEMAPPRAISER,
 	NOBJECTS
 };
 
